<resources>
    <string name="app_name">Lappr</string>

    <string name="title_activity_intro">Lappr</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="intro_content">LAPPR</string>
    <string name="recordWorkout">Record a Workout</string>
    <string name="findWorkout">Find a Workout</string>
    <string name="enterDate">Select Date...</string>
    <string name="enterWorkoutDate">When did you work out?</string>
    <string name="rounds">How many rounds did you do?</string>
    <string name="setTypeWarmup">Warmup</string>
    <string name="setTypeMain">Main</string>
    <string name="setTypeCoolDown">Cool Down</string>
    <string name="createDialogTitle">Create a New Workout</string>
    <string name="createDialogMessage">Select workout date</string>
    <string name="createDialogNew">New Workout</string>
    <string name="createDialogClone">Clone Prior</string>
    <string-array name="strokes">
        <item>Freestyle</item>
        <item>Backstroke</item>
        <item>Breaststroke</item>
        <item>Butterfly</item>
        <item>IM</item>
        <item>Reverse IM</item>
        <item>IM Order</item>
        <item>Choice</item>
    </string-array>
    <string-array name="distances">
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>800</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
    </string-array>
    <string-array name="swimType">
        <item>Swim</item>
        <item>Kick</item>
        <item>Drill</item>
    </string-array>
    <string-array name="interval">
        <item>Time Interval</item>
        <item>Rest Interval</item>
    </string-array>
    <string-array name="intervalChange">
        <item>Constant</item>
        <item>Descending</item>
        <item>Ascending</item>
    </string-array>

    <!-- navigation items -->
    <string name="title_workouts">My Workouts</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_logout">Logout</string>

    <string name="defaultSetRounds">1</string>
    <string name="button_addExistingWorkout">Add Existing Workout</string>
    <string name="button_createWorkout">Create New Workout</string>

    <!-- About dialog -->
    <string name="aboutTitle">About Lappr</string>
    <string name="aboutPositive">Ok</string>
    <string name="aboutCredits">Developed by: <a href="mailto:dave.s.fitzpatrick@gmail.com">Dave Fitzpatrick</a>\n\nSwimming Man Icon Made by
        <a href="https://www.flaticon.com/authors/scott-de-jonge">Scott De Jonge</a> from <a href="https://www.flaticon.com">www.flaticon.com</a></string>

    <!-- Laps dialog -->
    <string name="valueReps">Reps</string>
    <string name="valueDistance">Distance</string>
    <string name="valueIntervalType">Interval Type</string>

    <string name="valueFreestyle">Free</string>
    <string name="valueBackstroke">Back</string>
    <string name="valueBreaststroke">Breast</string>
    <string name="valueButterfly">Fly</string>
    <string name="valueIM">IM</string>
    <string name="valueRIM">Rev. IM</string>
    <string name="valueIMO">IM Order</string>
    <string name="valueChoice">Choice</string>

    <string name="valueSwim">Swim</string>
    <string name="valueKick">Kick</string>
    <string name="valueDrill">Drill</string>

    <string name="nextDialog">Next</string>

    <!-- Intervals dialog -->
    <string name="valueIntervalRep">Rep</string>
    <string name="valueIntervalRest">Rest</string>
    <string name="valueIntervalTotal">Total</string>
    <string name="valueIntervalNone">None</string>

    <string name="valueIntervalDesc">Descend</string>
    <string name="valueIntervalConstant">Constant</string>
    <string name="valueIntervalAsc">Ascend</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterName">Name:</string>
    <string name="textDistance">Distance:</string>
    <string name="textReps">Reps:</string>
    <string name="textStroke">Stroke:</string>
    <string name="textPace">Pace:</string>
    <string name="textInterval">Base Interval</string>
    <string name="textSave">Save</string>
    <string name="menu">Menu</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="labelDistance">Distance</string>
    <string name="labelWorkouts">Workouts</string>
    <string name="labelRounds">Rounds:</string>
    <string name="hintWorkoutName">Name this workout...</string>
    <string name="title_activity_login">Sign in</string>

    <!-- set component editor -->
    <string name="labelIntervalTypes">Interval Type</string>
    <string name="labelBaseInterval">Base</string>
    <string name="labelRestInterval">Rest</string>
    <string name="labelTotalInterval">Total</string>
    <string name="labelNoInterval">None</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login or Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="radio_login">Login</string>
    <string name="radio_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="switchCompleted">Finished Workout?</string>
    <string name="switchDone">Mark as Done?</string>

    <!-- Strings for changing workout date -->
    <string name="workoutDateTitle">Select workout date</string>
    <string name="workoutDatePositive">Save</string>
    <string name="workoutDateNegative">Cancel</string>
    <string name="workoutCompleteSwitch">Mark Complete?</string>

    <!-- Strings for notes dialog -->
    <string name="workoutNotesTitle">Workout Notes</string>
    <string name="workoutNotesPositive">Save</string>
    <string name="workoutNotesNegative">Cancel</string>

    <!-- Strings for share dialog -->
    <string name="workoutShareTitle">Share Workout</string>
    <string name="workoutSharePositive">E-mail Workout</string>
    <string name="workoutShareNegative">Cancel</string>
    <string name="workoutShareHeader">Check out this workout I built on the Lappr App:\n\n</string>

    <!-- Strings for add set options -->
    <string name="addSetDialog">Add Set</string>
    <string-array name="setTypes">
        <item>Warmup</item>
        <item>Main</item>
        <item>Cool Down</item>
    </string-array>

    <!-- Strings for delete set confirm -->
    <string name="deleteSetDialog">Permanently delete this set?</string>
    <string name="deleteSetPositive">Yes, delete</string>
    <string name="deleteSetNegative">No, cancel</string>

    <!-- Strings for delete workout confirm -->
    <string name="deleteWorkoutDialog">Permanently delete this workout?</string>
    <string name="deleteWorkoutPositive">Yes, delete</string>
    <string name="deleteWorkoutNegative">No, cancel</string>

    <!-- Strinsg for delete set component confirm -->
    <string name="deleteSetComponentDialog">Permanently delete these laps?</string>
    <string name="deleteSetComponentPositive">Yes, delete</string>
    <string name="deleteSetComponentNegative">No, cancel</string>

    <!-- values for dashbord -->
    <string name="titleRecentWorkouts">Recent Workouts</string>
    <string name="titleUpcomingWorkouts">Scheduled Workouts</string>
    <string name="titleOverdueWorkouts">Overdue Workouts</string>
    <string name="titleUpcomingEmpty">No scheduled workouts</string>
    <string name="titleRecentEmpty">No recent workouts</string>
    <string name="labelLoadMore">Tap to load more&#8230;</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="labelSnapshot">Your Weekly Summary</string>
    <string name="workoutNotesHint">Enter workout notes...</string>

</resources>
