<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:orientation="vertical"
    android:padding="8dp">

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <NumberPicker
            android:id="@+id/repPicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-28dp"
            android:layout_weight="1" />

        <NumberPicker
            android:id="@+id/distancePicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-28dp"
            android:layout_weight="1" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/buttonFr"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_state"
                android:textOff="@string/valueFreestyle"
                android:textOn="@string/valueFreestyle" />

            <ToggleButton
                android:id="@+id/buttonBa"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_state"
                android:textOff="@string/valueBackstroke"
                android:textOn="@string/valueBackstroke" />

            <ToggleButton
                android:id="@+id/buttonBr"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_state"
                android:textOff="@string/valueBreaststroke"
                android:textOn="@string/valueBreaststroke" />

            <ToggleButton
                android:id="@+id/buttonFly"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_state"
                android:textOff="@string/valueButterfly"
                android:textOn="@string/valueButterfly" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/buttonIM"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_state"
            android:textOff="@string/valueIM"
            android:textOn="@string/valueIM" />

        <ToggleButton
            android:id="@+id/buttonRIM"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_state"
            android:textOff="@string/valueRIM"
            android:textOn="@string/valueRIM" />

        <ToggleButton
            android:id="@+id/buttonIMO"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_state"
            android:textOff="@string/valueIMO"
            android:textOn="@string/valueIMO" />

        <ToggleButton
            android:id="@+id/buttonCh"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_state"
            android:textOff="@string/valueChoice"
            android:textOn="@string/valueChoice" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:weightSum="3"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/buttonSwim"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_state"
            android:textOn="@string/valueSwim"
            android:textOff="@string/valueSwim" />

        <ToggleButton
            android:id="@+id/buttonKick"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_state"
            android:textOn="@string/valueKick"
            android:textOff="@string/valueKick" />

        <ToggleButton
            android:id="@+id/buttonDrill"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_state"
            android:textOn="@string/valueDrill"
            android:textOff="@string/valueDrill" />
    </LinearLayout>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/nextDialog" />

</LinearLayout>