<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/svContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/svLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/caldroid_lighter_gray"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelSnapshot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/labelSnapshot"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/labelSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#ffffff">

                <TextView
                    android:id="@+id/labelWorkouts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/labelWorkouts" />

                <TextView
                    android:id="@+id/labelDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/labelDistance" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/valueSummary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff">

                <TextView
                    android:id="@+id/valueWorkouts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/valueDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textSize="30sp" />

            </LinearLayout>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/distanceChart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.github.mikephil.charting.charts.BarChart>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/strokeChart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.github.mikephil.charting.charts.PieChart>

            <LinearLayout
                android:id="@+id/workoutSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>
        </LinearLayout>
    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addWorkoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:focusable="auto"
        android:paddingBottom="0dp"
        app:backgroundTint="@color/caldroid_holo_blue_light"
        app:fabCustomSize="@android:dimen/notification_large_icon_width"
        app:layout_anchor="@id/svContent"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_swimming_man" />

</android.support.design.widget.CoordinatorLayout>
